# AIFacialMatching

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  pyproject.toml
auth/: api.py  auth.dockerfile
backend/: api.py  backend.dockerfile  settings.py  user_management.py
frontend/: frontend.dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: theme-toggle.tsx  user-nav.tsx
frontend/src/layout/: layout.tsx  navbar.tsx  sidebar.tsx
frontend/src/pages/: admin.tsx  dashboard.tsx  history.tsx  identities.tsx  matches.tsx  requests.tsx  settings.tsx  systemHealth.tsx  upload.tsx
frontend/src/styles/: theme.css
src/armero/: generate_embedding.py  init_database.py
